<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_saldo">

    <fragment
        android:id="@+id/navigation_saldo"
        android:name="com.example.blackpase.ui.saldo.SaldoFragment"
        android:label="@string/title_saldo"
        tools:layout="@layout/fragment_saldo" />

    <fragment
        android:id="@+id/navigation_pagar"
        android:name="com.example.blackpase.ui.pagar.PagarFragment"
        android:label="@string/title_pagar"
        tools:layout="@layout/fragment_pagar" />

    <fragment
        android:id="@+id/navigation_historial"
        android:name="com.example.blackpase.ui.historial.HistorialFragment"
        android:label="@string/title_historial"
        tools:layout="@layout/fragment_historial" />
</navigation>
